--- a/index.html
+++ b/index.html
@@ -10,16 +10,29 @@
     <link rel="stylesheet" href="styles/portfolio.css" class="css">
 </head>
 <body>
-    <header>
+    <header class="header">
 <nav>
     <h3 class="nav-title">ma<span class="text-orange">r</span>y</h3>
     <ul>
         <li><a href="#">portfolio</a></li>
         <li><a href="#">blog</a></li>
-        <li><button class="primary-button">hire me</button></li>
+        <li><button class=" primary-button ">hire me</button></li>
         
     </ul>
 </nav>
+  <div class="banner">
+    <div>
+        <h3 class="banner-greeting">Hi, I  am </h3>
+        <h1 class="baner-title">Mary Hardy</h1><p>
+            hot what able cold new see hold.Friendly as an betrayed formerly  
+            he. Morning because as to society behaved moments.   
+       </p>
+       <button class="primary-button">downlod cv</button>
+       <button class="primary-button ">contact</button>
+    </div>
+    <img class="profile-pic" src="images/hardy.png" alt="">
+  </div>
+ 
     </header>
     <main>
 
