--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <hr>
-  <div class="resume-colum">
+    <!-- <div class="resume-colum"> -->
     
     <div class="resume-item">
       <h2 class="resume-item-title">Master in Computer Engineering</h2>
@@ -110,7 +110,7 @@
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <hr>
-  <div class="resume-colum">
+  <!-- <div class="resume-colum"> -->
     <div class="resume-item">
       <h2 class="resume-item-title">Master in Computer Engineering</h2>
       <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
@@ -128,7 +128,7 @@
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
     </div>
     <hr>
-  <div class="resume-colum">
+  <!-- <div class="resume-colum"> -->
     <div class="resume-item">
       <h2 class="resume-item-title">Jr. Font End Developer </h2>
       <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022 </h3>
@@ -136,7 +136,7 @@
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
     </div>
     <hr>
-  <div class="resume-colum">
+  <!-- <div class="resume-colum"> -->
     <div class="resume-item">
       <h2 class="resume-item-title">HTML Developer </h2>
       <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018 </h3>
@@ -144,7 +144,9 @@
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
     </div>
   </div>
-
+</div>
+<div class="download-cv">
+  <button class=" primary-button">download-cv</button>
 </div>
     </section>
     </main>
