--- a/index.html
+++ b/index.html
@@ -151,7 +151,20 @@
     </section>
     </main>
     <footer>
-        
+      <div class="footer-colum">
+        <h3 class="section-title">lest connect</h3>
+        <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+<div class="sociol-links">
+<a href="#"><img src="images/icons/facebook.png">   </a>
+<a href="#"><img src="images/icons/insta.png">   </a>
+<a href="#"><img src="images/icons/twitter.png">   </a>
+
+</div>
+      </div>
+      <div class="footer-colum">
+        <h3 class="section-title">Let’s Message me</h3>
+
+      </div> 
     </footer>
 </body>
 </html>
